# vexelstrom

./: Cargo.toml  README.md  config.example.toml  flake.nix  generate_models.sh
frontend/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/.storybook/: main.ts
frontend/project.inlang/: project_id
frontend/src/: app.css
frontend/src/lib/components/: Button.svelte  Episode.svelte  Header.svelte  Input.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/account/login/: +page.svelte
frontend/src/routes/account/register/: +page.svelte
frontend/src/stories/: Button.stories.svelte  Button.svelte  Episode.stories.svelte  Header.stories.svelte  Input.stories.svelte
migrations/2025-03-15-182718_users/: up.sql
src/: config.rs  consts.rs  lib.rs  main.rs
src/db/: changesets.rs  mod.rs  models.rs  schema.rs
src/http/: error.rs  mod.rs  router.rs  state.rs
src/http/routes/user/: mod.rs
src/util/: password.rs
