[package]
name = "vexelstrom"
description = "Experimental podcasting software"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.26", features = ["derive", "wrap_help"] }
color-eyre = "0.6.3"
const_format = "0.2.34"
diesel-async = { version = "0.5.2", features = [
    "bb8",
    "pool",
    "postgres",
    "sync-connection-wrapper",
] }
eyre = "0.6.12"
git-version = "0.3.9"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
